<?xml version="1.0" encoding="utf-8" standalone="no"?>
<resources>
    <string name="app_name">蜕变</string>
    <string name="about_health">长春蜕变科技有限公司</string>
    <string name="error_network">搜索失败,请检查网络连接！</string>
    <string name="error_key">key验证无效！</string>
    <string name="error_other">未知错误，请稍后重试!错误码为</string>
    <string name="no_result">对不起，没有搜索到相关数据！</string>
    <string name="action_settings">Settings</string>
    <string name="login_button_text">登  录</string>
    <string name="login_edituser_text">账号</string>
    <string name="login_admintext">admin</string>
    <string name="login_editpass_text">密码</string>
    <string name="login_account_hint">请输入用户名</string>
    <string name="login_account_hint1">请输入手机号</string>
    <string name="login_account_pwd_hint">请输入原密码</string>
    <string name="login_account_pwd_hint1">请输入用户名</string>
    <string name="login_ing">正在登录…</string>
    <string name="login_cannot_null">用户名密码不能为空！</string>
    <string name="login_no_num">还没有账号</string>
    <string name="login_no_num1">，</string>
    <string name="login_no_num2">去</string>
    <string name="login_now">注册</string>
    <string name="login_forget_psw">忘记密码？</string>
    <string name="login_third">可以用一下互联登录</string>
    <string name="login_xinlang">新浪微博登陆</string>
    <string name="login_weixin">微信登录</string>
    <string name="login_regist_text">请填写你的个人信息</string>
    <string name="regist_phone">手机号码：</string>
    <string name="regist_birthday">生&#160;&#160;&#160;&#160;日：</string>
    <string name="regist_phone_text">请正确输入你的账号</string>
    <string name="regist_phone_num">请正确输入你的手机号</string>
    <string name="regist_qq">QQ&#160;号码：</string>
    <string name="regist_qq_text">请输入你的QQ号码</string>
    <string name="regist_email"> 邮 &#160;&#160;&#160;&#160;箱：</string>
    <string name="regist_email_text">请输入你的邮箱</string>
    <string name="regist_realName">真实名字：</string>
    <string name="regist_nickName">昵&#160;&#160;&#160;&#160;称：</string>
    <string name="regist_realName_text">请输入您的真实姓名</string>
    <string name="regist_mickName_text">请输入您的昵称</string>
    <string name="regist_sex">性&#160;&#160;&#160;&#160;别：</string>
    <string name="regist_height">身&#160;&#160;&#160;&#160;高：</string>
    <string name="regist_weight">体&#160;&#160;&#160;&#160;重：</string>
    <string name="regist_sex_man">男</string>
    <string name="regist_sex_woman">女</string>
    <string name="regist_userName">账    号: </string>
    <string name="regist_userName_text">请输入你的账号</string>
    <string name="regist_userpsw">设置密码:</string>
    <string name="regist_userpsw_text">请输入密码</string>
    <string name="regist_next_userpsw">确认密码:</string>
    <string name="regist_next_userpsw_text">请再次输入密码</string>
    <string name="regist_resit">重填</string>
    <string name="regist_submit">提交</string> 
    <string name="set">设  置</string>
    <string name="set_user_text">账户</string>
    <string name="set_version">版本</string>
    <string name="set_chagepass">修改密码</string>
    <string name="set_chageuser">修改用户信息</string>
    <string name="set_exit">退出登录</string>
    <string name="set_updata">更新</string>
   
    <string name="exp_now">体验登录</string>
    <string name="exp_name">姓名</string>
    <string name="exp_sex">性别</string>
    <string name="exp_blood">血型</string>
    <string name="exp_birthday">出生日期</string>
    <string name="exp_analysis">体制分析</string>
    <string name="exp_fillreg">填写注册信息</string>
    <string name="exp_submitreg">注册</string>
    <string name="exp_info">【体质分析报告】</string>
    
    <string name="loading">正在加载中</string>
    <string name="please_wait">请稍候…</string>
    <string name="serious_crash">发生一个错误，请重新打开</string>
    <string name="help_us_send_log">请发送消息给我们，帮助我们提高产品质量</string>
    <string name="restart_vlc">重启</string>
    <string name="send_log">发送日志</string>
    <string name="sending_log">正在发送日志...</string>
    <string name="time_0" translatable="false">0:00</string>
    <string name="limit_pwd">0123456789/*-+qazwsxedcrfvtgbyhnujmikolpQAZWSXEDCRFVTGBYHNUJMIKLOP,.!@#$%_</string>
    <string name="actionbar_activity_not_found">Failed to open intent...</string>
    <string name="share_by_weixin">微信分享</string>
    <string name="share_by_qq">QQ分享</string>
    <string name="share_by_yixin">易信分享</string>
    <string name="shake_share">注册摇一摇截图（分享）</string>
    <string name="shake_openshare">注册摇一摇（打开分享面板）</string>
    <string name="shake_scrshot">注册摇一摇（截图）</string>
    <string name="take_scrshot">直接截图</string>
    <string name="play">播放</string>
    <string name="pause">暂停</string>
    <string name="stop">停止</string>
    <string name="quit">退出</string>
    <string name="video_start_time">00:00</string>
    <string name="goto_video">摇一摇视频截图Activity</string>
    <string name="goto_game">游戏Activity</string>
    <string name="goto_common">普通Activity</string>
    <string name="video">VideoActivity</string>
    <string name="game">GameActivity</string>
    <string name="common">CommonActivity</string>
    <string name="back">返回</string>
    <string name="goto_facebook">添加Facebook分享</string>
    <string name="fb_login">Facebook登录</string>
    <string name="fb_logout">Facebook注销</string>
    <string name="fb_share">Facebook分享</string>
    <string name="laiwang_share">来往分享</string>
    <string name="instagram_share">Instagram分享</string>
    <string name="pocket_share">Pocket分享</string>
    <string name="linkedin_share">LinkedIn分享</string>
    <string name="foursquare_share">FourSquare分享</string>
    <string name="ynote_share">有道云笔记分享</string>
    <string name="evernote_share">印象笔记分享</string>
    <string name="pinterest_share">Pinterest分享</string>
    <string name="custom_platform_share">自定义平台分享</string>
    <string name="login_sina">登录（新浪微博）</string>
    <string name="logout_sina">注销登录（新浪微博）</string>
    <string name="login_qq">登录（QQ）</string>
    <string name="logout_qq">注销登录（QQ）</string>
    <string name="login_qzone">登录（QQ空间）</string>
    <string name="logout_qzone">注销登录（QQ空间）</string>
    <string name="fb_app_id">567261760019884</string>
    <string name="photo_post">Photo Post</string>
    <string name="success">Success</string>
    <string name="successfully_posted_post">Successfully posted \'%1$s\'.\nPost ID: %2$s</string>
    <string name="error">Error</string>
    <string name="status_update">Updating Facebook status at </string>
    <string name="ok">OK</string>
    <string name="cancelled">Cancelled</string>
    <string name="permission_not_granted">Unable to perform selected action because permissions were not granted.</string>
    
    <string name="banben">版本v1.0.1</string>
    
    
    <!-- calc demo --> 
    <string name="hello_world">Hello world!</string>
    <string name="menu_settings">Settings</string>
    <string name="title_demo_activity">MainActivity</string>
    <string name="mc">mc</string>
    <string name="mPlus">m+</string>
    <string name="mMinus">m-</string>
    <string name="mr">mr</string>
    <string name="C">C</string>
    <string name="PlusAndMinusLog">+/-</string>    
    <string name="DivisionLog">/</string>
    <string name="MultiplicationLog">*</string> 
    <string name="Number7">7</string>
    <string name="Number8">8</string>
    <string name="Number9">9</string>    
    <string name="SubtractionLog">-</string>      
    <string name="Number4">4</string>
    <string name="Number5">5</string>
    <string name="Number6">6</string>    
    <string name="AdditionLog">+</string>     
    <string name="Number1">1</string>
    <string name="Number2">2</string>
    <string name="Number3">3</string>    
    <string name="Number0">0</string>  
    <string name="Point">.</string>    
    <string name="EqualLog">=</string>    
        
    <!-- end -->
     
</resources>
