<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#F7F7F7"
    android:orientation="vertical"
    android:weightSum="3" >

    <RelativeLayout
        android:id="@+id/set_change_pass"
        android:layout_width="fill_parent"
        android:layout_height="44dp"
        android:layout_marginTop="15dp"
        android:background="@color/white"
        android:orientation="horizontal" >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_marginLeft="25dp"
            android:text="@string/set_chagepass"
            android:textColor="@color/black"
            android:textSize="16sp"
            android:textStyle="normal" />

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:layout_gravity="center"
            android:layout_marginRight="10dp"
            android:background="@drawable/s_record_edit" />
    </RelativeLayout>
    <View
        android:layout_width="fill_parent"
        android:layout_height="0.5dp"
        android:layout_marginLeft="25dp"
        android:background="#ECECEC" />

    <RelativeLayout
        android:id="@+id/set_change_userinfo"
        android:layout_width="fill_parent"
        android:layout_height="44dp"
        android:background="@color/white"
        android:orientation="horizontal" >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_marginLeft="25dp"
            android:text="@string/set_chageuser"
            android:textColor="@color/black"
            android:textSize="16sp"
            android:textStyle="normal" />

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:layout_gravity="center"
            android:layout_marginRight="10dp"
            android:background="@drawable/s_record_edit" />
    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/set_change_exit"
        android:layout_width="fill_parent"
        android:layout_height="44dp"
        android:layout_marginTop="15dp"
        android:background="@color/white"
        android:orientation="horizontal" >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_marginLeft="25dp"
            android:text="@string/set_exit"
            android:textColor="@color/black"
            android:textSize="16sp"
            android:textStyle="normal" />

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:layout_gravity="center"
            android:layout_marginRight="10dp"
            android:background="@drawable/s_record_edit" />
    </RelativeLayout>

        <RelativeLayout
            android:id="@+id/set_change_upload"
            android:layout_width="fill_parent"
            android:layout_height="44dp"
            android:layout_marginTop="15dp"
            android:background="@color/white"
            android:orientation="horizontal" >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_marginLeft="25dp"
                android:text="@string/set_updata"
                android:textColor="@color/black"
                android:textSize="16sp"
                android:textStyle="normal" />

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:layout_centerVertical="true"
                android:layout_gravity="center"
                android:layout_marginRight="10dp"
                android:background="@drawable/s_record_edit" />
        </RelativeLayout>

</LinearLayout>